# drm_demo

./: .gitignore  CMakeLists.txt  LICENSE  drmtest1.c  drmtest2.c  modeset-plane-test.c
